--- a/Project Frontend/登录注册页-顾客/css/style.css
+++ b/Project Frontend/登录注册页-顾客/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,300i,400,500,600,700,800,900');
+@import url('https://fonts.loli.net/css?family=Poppins:100,200,300,300i,400,500,600,700,800,900');
 
 
 /*------------------------------------------------------------------
